--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Выбери свой продукт</h1>
   <div>
-    <img src="images/photo 1.svg" alt="Увлажняющий мусс">
+    <img src="images/moisturizing mousse.svg" alt="Увлажняющий мусс">
     <p>для нормальной кожи</p>
     <h3>Увлажняющий мусс</h3>
     <p>Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.</p>
@@ -18,7 +18,7 @@
       <li>солнцезащитные компоненты</li>
     </ul>
     <p>
-      <strong>Цена</strong> 2 750 ₽
+      <strong>Цена</strong> 2 750 &#8381;
     </p>
   </div>
 </body>
