--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body class="body">
+<body>
   <h1 class="product-title">Выбери свой продукт</h1>
   <ul class="product-list">
     <li>
       <div class="card-container">
-        <img src="images/moisturizing mousse.svg" alt="Увлажняющий мусс" width="290" height="245">
+        <img src="images/moisturizing-mousse.svg" alt="Увлажняющий мусс" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Увлажняющий мусс</h3>
         <p class="product-description">Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.</p>
@@ -32,7 +32,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/moisturizing mask.png" alt="Увлажняющая маска" width="290" height="245">
+        <img src="images/moisturizing-mask.png" alt="Увлажняющая маска" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Увлажняющая маска</h3>
         <p class="product-description">Способствует удерживанию влаги в верхних слоях кожи..</p>
@@ -50,7 +50,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Cleansing gel.png" alt="Гель для умывания" width="290" height="245">
+        <img src="images/Cleansing-gel.png" alt="Гель для умывания" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Гель для умывания</h3>
         <p class="product-description">Интенсивно очищает, не повреждает защитный барьер кожи.</p>
@@ -68,7 +68,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Gift set 1.png" alt="Подарочный набор №1" width="290" height="245">
+        <img src="images/Gift-set-1.png" alt="Подарочный набор №1" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Подарочный набор №1</h3>
         <p class="product-description">Набор, состоящий из увлажняющего крема и маски.</p>
@@ -86,7 +86,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Gift set 5.png" alt="Подарочный набор №5" width="290" height="245">
+        <img src="images/Gift-set-5.png" alt="Подарочный набор №5" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Подарочный набор №5</h3>
         <p class="product-description">Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
