fix small issues in html and css files

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Cleansing-gel.png" alt="Гель для умывания" width="290" height="245">
+        <img src="images/cleansing-gel.png" alt="Гель для умывания" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Гель для умывания</h3>
         <p class="product-description">Интенсивно очищает, не повреждает защитный барьер кожи.</p>
@@ -68,7 +68,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Gift-set-1.png" alt="Подарочный набор №1" width="290" height="245">
+        <img src="images/gift-set-1.png" alt="Подарочный набор №1" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Подарочный набор №1</h3>
         <p class="product-description">Набор, состоящий из увлажняющего крема и маски.</p>
@@ -86,7 +86,7 @@
     </li>
         <li>
       <div class="card-container">
-        <img src="images/Gift-set-5.png" alt="Подарочный набор №5" width="290" height="245">
+        <img src="images/gift-set-5.png" alt="Подарочный набор №5" width="290" height="245">
         <span class="product-category">для нормальной кожи</span>
         <h3 class="product-name">Подарочный набор №5</h3>
         <p class="product-description">Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
