--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
   <h1 class="product-title">Выбери свой продукт</h1>
+  <button id="change-first-card-color-btn">Сменить цвет первой карточки</button>
+  <button id="change-all-card-color-btn">Сменить цвет всех карточек</button>
+  <button id="open-google-btn">Открыть Google.com</button>
+  <button id="output-console-log">Вывести сообщение в консоль лог</button>
+  <button id="toggle-color-btn" class="btn btn-blue">Я меняю свой цвет</button>
   <ul class="product-list">
     <li>
       <div class="card-container">
@@ -103,5 +108,6 @@
       </div>
     </li>
   </ul>
+  <script src="main.js"></script>
 </body>
 </html>
