added new file:   homework-6.js

--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
   </ul>
   <script src="main.js"></script>
   <script src="homework-5.js"></script>
+  <script src="homework-6.js"></script>
 </body>
 </html>
