added homework-8.js and product-cards.js

--- a/index.html
+++ b/index.html
@@ -108,9 +108,21 @@
       </div>
     </li>
   </ul>
+  <ul id="product-list"></ul>
+  <template id="product-card-template">
+    <li class="product-container">
+      <img class="product-image" width="290" height="245" alt="">
+      <p class="product-category"></p>
+      <p class="product-name"></p>
+      <p class="product-description"></p>
+      <p class="product-compound"></p>
+      <p class="product-price"></p>
+    </li>
+  </template>
   <script src="main.js"></script>
   <script src="homework-5.js"></script>
   <script src="homework-6.js"></script>
   <script type="module" src="homework-7.js"></script>
+  <script type="module" src="homework-8.js"></script>
 </body>
 </html>
