--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <p class="product-category"></p>
       <p class="product-name"></p>
       <p class="product-description"></p>
-      <p class="product-compound"></p>
+      <ul class="product-compound"></ul>
       <p class="product-price"></p>
     </li>
   </template>
