--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <input type="text" id="secondName" name="secondName" placeholder="Введите фамилию" required>
 
     <label for="birthday">Дата рождения</label>
-    <input type="date" id="birthday" name="birthday" placeholder="Введите дату рождение" required>
+    <input type="date" id="birthday" name="birthday" placeholder="Введите дату рождения" required>
 
     <label for="login">Логин</label>
     <input type="text" id="login" name="login" placeholder="Введите логин" required>
